--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="cl"></div>
     <div class="kf" style="padding-top:15px;">
         <!-- //客服链接 -->
-        <a href="" target="_blank" class="kf">
+        <a href="https://tawk.to/chat/681b40faaffc0219158b21f6/1iql7blbh" target="_blank" class="kf">
 		<img src="files/kf.gif" alt="kf">
 	</a>
     </div>
