--- a/index.html
+++ b/index.html
@@ -96,8 +96,106 @@
         </ul>
             <script type="text/javascript" src="files/cesu.js"></script>
     </div>
+    <style>
+        /* 基础样式重置 */
 
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
+        body {
+            min-height: 100vh;
+            background: url('./img/beijing.png') no-repeat center center fixed;
+            background-size: cover;
+            position: relative;
+            overflow: hidden;
+            font-family: Arial, "Microsoft Yahei", sans-serif;
+        }
+
+        /* 右上角链接容器 */
+
+        .top-links {
+            position: absolute;
+            top: 3%;
+            right: 3%;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+            max-width: 40%;
+        }
+
+        /* 右下角链接样式 */
+
+        .bottom-link {
+            position: absolute;
+            bottom: 8%;
+            right: 5%;
+            animation: float 2s ease-in-out infinite;
+        }
+
+        /* 图片链接通用样式 */
+
+        .image-link {
+            display: block;
+            transition: all 0.3s ease;
+            filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
+        }
+
+        .image-link img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+
+        /* 悬停效果 */
+
+        .image-link:hover {
+            transform: scale(-20.05);
+            filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.4));
+        }
+
+        /* 浮动动画 */
+
+        @keyframes float {
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
+        }
+
+        /* 手机端适配 */
+
+        @media (max-width: 768px) {
+            .top-links {
+                gap: 10px;
+                max-width: 60%;
+            }
+            .bottom-link {
+                bottom: 10%;
+                left: 5%;
+            }
+            .bottom-link img {
+                width: 100px !important;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .top-links {
+                gap: 20px;
+            }
+            .image-link img {
+                min-width: 100px;
+            }
+        }
+    </style>
+        <a href="https://tawk.to/chat/681b40faaffc0219158b21f6/1iql7blbh" class="image-link bottom-link" target="_blank">
+            <img src="./images/kefu.png" alt="在线客服！" style="width: 150px;">
+        </a>
 
     <script type="text/javascript" src="files/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="files/demo.js"></script>
