--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         }
     </style>
         <a href="https://tawk.to/chat/681b40faaffc0219158b21f6/1iql7blbh" class="image-link bottom-link" target="_blank">
-            <img src="./images/kefu.png" alt="在线客服！" style="width: 150px;">
+            <img src="files/kefu.png" alt="在线客服！" style="width: 150px;">
         </a>
 
     <script type="text/javascript" src="files/jquery-1.11.1.min.js"></script>
