--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             box-sizing: border-box;
         }
 
-        body {
+        body1 {
             min-height: 100vh;
             background: url('./img/beijing.png') no-repeat center center fixed;
             background-size: cover;
@@ -116,7 +116,7 @@
 
         /* 右上角链接容器 */
 
-        .top-links {
+        .top-links1 {
             position: absolute;
             top: 3%;
             right: 3%;
@@ -128,7 +128,7 @@
 
         /* 右下角链接样式 */
 
-        .bottom-link {
+        .bottom-link1 {
             position: absolute;
             bottom: 8%;
             right: 5%;
@@ -137,13 +137,13 @@
 
         /* 图片链接通用样式 */
 
-        .image-link {
+        .image-link1 {
             display: block;
             transition: all 0.3s ease;
             filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
         }
 
-        .image-link img {
+        .image-link1 img {
             width: 100%;
             height: auto;
             border-radius: 8px;
@@ -151,14 +151,14 @@
 
         /* 悬停效果 */
 
-        .image-link:hover {
+        .image-link1:hover {
             transform: scale(-20.05);
             filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.4));
         }
 
         /* 浮动动画 */
 
-        @keyframes float {
+        @keyframes float1 {
             0%,
             100% {
                 transform: translateY(0);
@@ -171,29 +171,29 @@
         /* 手机端适配 */
 
         @media (max-width: 768px) {
-            .top-links {
+            .top-links1 {
                 gap: 10px;
                 max-width: 60%;
             }
-            .bottom-link {
+            .bottom-link1 {
                 bottom: 10%;
                 left: 5%;
             }
-            .bottom-link img {
+            .bottom-link1 img {
                 width: 100px !important;
             }
         }
 
         @media (min-width: 1200px) {
-            .top-links {
+            .top-links1 {
                 gap: 20px;
             }
-            .image-link img {
+            .image-link1 img {
                 min-width: 100px;
             }
         }
     </style>
-        <a href="https://tawk.to/chat/681b40faaffc0219158b21f6/1iql7blbh" class="image-link bottom-link" target="_blank">
+        <a href="https://tawk.to/chat/681b40faaffc0219158b21f6/1iql7blbh" class="image-link1 bottom-link1" target="_blank">
             <img src="files/kefu.png" alt="在线客服！" style="width: 150px;">
         </a>
 
