--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         .bottom-link1 {
             position: absolute;
             bottom: 8%;
-            right: 5%;
+            left: 5%;
             animation: float 2s ease-in-out infinite;
         }
 
