--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="kf" style="padding-top:15px;">
         <!-- //客服链接 -->
         <a href="https://tawk.to/chat/681b40faaffc0219158b21f6/1iql7blbh" target="_blank" class="kf">
-		<img src="files/kefu.png" alt="kf">
+		<img src="files/kf.gif" alt="kf">
 	</a>
     </div>
     <div class="cesu">
