--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="miaoinpt miaoinpt1">38ms</div>
                 <div class="miaoinpt miaoinpt2">BV安卓APP备用</div>
                 <!-- 进入链接 -->
-                <a href="https://reed.pingnan.net/Dos/d/c/qjedSwu8LweKGNLK" target="_blank" class="dw">点击下载</a>
+                <a href="http://154.37.212.122/bv.apk" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.038秒</em></span></li>
 
         </ul>
