--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <span style="display: none;">测速中...<img src="/github.io/files/mingjue.png" border="0" width="1" height="1" onerror="testresult(this)"></span></li>
             <li>
                 <div class="miaoinpt miaoinpt1">77ms</div>
-                <div class="miaoinpt miaoinpt2">BV下载总站</div>
+                <div class="miaoinpt miaoinpt2">BV下载总站/进入后刷新</div>
                 <!-- 进入链接 -->
                 <a href="https://www.bv123.app/" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.077秒</em></span></li>
