--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
     </div>
     <div class="cesu">
         <ul id="cesu">
-
+            <li>
+                <div class="miaoinpt miaoinpt1">...</div>
+                <div class="miaoinpt miaoinpt2">苹果H5封包</div>
+                <!-- 进入链接 -->
+                <a href="https://www.supertubeusa.com/web/r892f7" target="_blank" class="dw">点击安装</a>
+                <span style="display: none;">测速中...<img src="/github.io/files/mingjue.png" border="0" width="1" height="1" onerror="testresult(this)"></span></li>
             <li>
                 <div class="miaoinpt miaoinpt1">...</div>
                 <div class="miaoinpt miaoinpt2">苹果端直接安装</div>
