--- a/index.html
+++ b/index.html
@@ -71,31 +71,31 @@
                 <div class="miaoinpt miaoinpt1">...</div>
                 <div class="miaoinpt miaoinpt2">苹果端直接安装</div>
                 <!-- 进入链接 -->
-                <a href="itms-services://?action=download-manifest&url=https://jt-asia.katechilko.com/xs.plist" target="_blank" class="dw">点击安装</a>
+                <a href="https://bv02.cc/bvpg1xz.html" target="_blank" class="dw">点击安装</a>
                 <span style="display: none;">测速中...<img src="/github.io/files/mingjue.png" border="0" width="1" height="1" onerror="testresult(this)"></span></li>
             <li>
                 <div class="miaoinpt miaoinpt1">77ms</div>
                 <div class="miaoinpt miaoinpt2">BV下载总站/进入后刷新</div>
                 <!-- 进入链接 -->
-                <a href="https://www.bv123.app/" target="_blank" class="dw">点击下载</a>
+                <a href="https://app.cvzawt7i7opl.com/" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.077秒</em></span></li>
             <li>
                 <div class="miaoinpt miaoinpt1">38ms</div>
                 <div class="miaoinpt miaoinpt2">BV安卓APP</div>
                 <!-- 进入链接 -->
-                <a href="https://app-asia.ruihejade.com/flyapp.com/v/500/xs_137461104_sign.apk" target="_blank" class="dw">点击下载</a>
+                <a href="tzbvxz.html" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.038秒</em></span></li>
             <li>
                 <div class="miaoinpt miaoinpt1">38ms</div>
                 <div class="miaoinpt miaoinpt2">BV登录H5</div>
                 <!-- 进入链接 -->
-                <a href="https://comisrzmi.cnzyzl.cn/Dos/d/c/qjedSwu8LweKGNLK" target="_blank" class="dw">点击下载</a>
+                <a href="tzbvxz.html" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.038秒</em></span></li>
             <li>
                 <div class="miaoinpt miaoinpt1">38ms</div>
                 <div class="miaoinpt miaoinpt2">BV安卓APP备用</div>
                 <!-- 进入链接 -->
-                <a href="http://154.37.212.122/bv.apk" target="_blank" class="dw">点击下载</a>
+                <a href="tzbvxz.htmlk" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.038秒</em></span></li>
 
         </ul>
