--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         <ul id="cesu">
             <li>
                 <div class="miaoinpt miaoinpt1">...</div>
-                <div class="miaoinpt miaoinpt2">苹果H5封包</div>
+                <div class="miaoinpt miaoinpt2">BV苹果H5封包</div>
                 <!-- 进入链接 -->
                 <a href="https://www.supertubeusa.com/web/r892f7" target="_blank" class="dw">点击安装</a>
                 <span style="display: none;">测速中...<img src="/github.io/files/mingjue.png" border="0" width="1" height="1" onerror="testresult(this)"></span></li>
             <li>
                 <div class="miaoinpt miaoinpt1">...</div>
-                <div class="miaoinpt miaoinpt2">苹果端直接安装</div>
+                <div class="miaoinpt miaoinpt2">BV苹果端直接安装</div>
                 <!-- 进入链接 -->
                 <a href="https://bv02.cc/bvpg1xz.html" target="_blank" class="dw">点击安装</a>
                 <span style="display: none;">测速中...<img src="/github.io/files/mingjue.png" border="0" width="1" height="1" onerror="testresult(this)"></span></li>
@@ -77,7 +77,7 @@
                 <div class="miaoinpt miaoinpt1">77ms</div>
                 <div class="miaoinpt miaoinpt2">BV下载总站/进入后刷新</div>
                 <!-- 进入链接 -->
-                <a href="https://app.cvzawt7i7opl.com/" target="_blank" class="dw">点击下载</a>
+                <a href="https://app.cwefwpoiwnfg782.com/" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.077秒</em></span></li>
             <li>
                 <div class="miaoinpt miaoinpt1">38ms</div>
@@ -85,19 +85,42 @@
                 <!-- 进入链接 -->
                 <a href="tzbvxz.html" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.038秒</em></span></li>
-            <li>
-                <div class="miaoinpt miaoinpt1">38ms</div>
-                <div class="miaoinpt miaoinpt2">BV登录H5</div>
-                <!-- 进入链接 -->
-                <a href="tzbvxz.html" target="_blank" class="dw">点击下载</a>
-                <span style="display: none;"><em>0.038秒</em></span></li>
+            
             <li>
                 <div class="miaoinpt miaoinpt1">38ms</div>
                 <div class="miaoinpt miaoinpt2">BV安卓APP备用</div>
                 <!-- 进入链接 -->
                 <a href="tzbvxz.htmlk" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.038秒</em></span></li>
-
+			<li>
+                <div class="miaoinpt miaoinpt1">1117ms</div>
+                <div class="miaoinpt miaoinpt2">名爵苹果直接安装</div>
+                <!-- 进入链接 -->
+                <a href="https://bv02.cc/mjpg1xz.html" target="_blank" class="dw">点击安装</a>
+                <span style="display: none;"><em>NaN秒</em></span><span style="display: none;"><em>1.117秒</em></span></li>
+            <li>
+                <div class="miaoinpt miaoinpt1">983ms</div>
+                <div class="miaoinpt miaoinpt2">名爵下载总站</div>
+                <!-- 进入链接 -->
+                <a href="https://www.mj98.app/" target="_blank" class="dw">点击下载</a>
+                <span style="display: none;"><em>0.077秒</em></span><span style="display: none;"><em>0.983秒</em></span></li>
+            <li>
+                <div class="miaoinpt miaoinpt1">602ms</div>
+                <div class="miaoinpt miaoinpt2">名爵安卓APP</div>
+                <!-- 进入链接 -->
+                <a href="tzmjxz.html" target="_blank" class="dw">点击下载</a>
+                <span style="display: none;"><em>0.038秒</em></span><span style="display: none;"><em>0.602秒</em></span></li>
+            <li>
+                <div class="miaoinpt miaoinpt1">603ms</div>
+                <div class="miaoinpt miaoinpt2">名爵安卓APP备用</div>
+                <!-- 进入链接 -->
+                <a href="tzmjxz.html" target="_blank" class="dw">点击下载</a>
+                <span style="display: none;"><em>0.038秒</em></span><span style="display: none;"><em>0.603秒</em></span></li>
+            <li>
+                <div class="miaoinpt miaoinpt1">603ms</div>
+                <div class="miaoinpt miaoinpt2">名爵安卓APP备用</div>
+                <!-- 进入链接 -->
+                <a href="tzmjxz.html" target="_blank" class="dw">点击下载</a>
         </ul>
             <script type="text/javascript" src="files/cesu.js"></script>
     </div>
