--- a/index.html
+++ b/index.html
@@ -93,22 +93,22 @@
                 <a href="tzbvxz.htmlk" target="_blank" class="dw">点击下载</a>
                 <span style="display: none;"><em>0.038秒</em></span></li>
 			<li>
-                <div class="miaoinpt miaoinpt1">1117ms</div>
-                <div class="miaoinpt miaoinpt2">名爵苹果直接安装</div>
+                <div class="miaoinpta miaoinpt1a">1117ms</div>
+                <div class="miaoinpta miaoinpt2a">名爵苹果直接安装</div>
                 <!-- 进入链接 -->
-                <a href="https://bv02.cc/mjpg1xz.html" target="_blank" class="dw">点击安装</a>
+                <a href="https://bv02.cc/mjpg1xz.html" target="_blank" class="dwa">点击安装</a>
                 <span style="display: none;"><em>NaN秒</em></span><span style="display: none;"><em>1.117秒</em></span></li>
             <li>
-                <div class="miaoinpt miaoinpt1">983ms</div>
-                <div class="miaoinpt miaoinpt2">名爵下载总站</div>
+                <div class="miaoinpta miaoinpt1a">983ms</div>
+                <div class="miaoinpta miaoinpt2a">名爵下载总站</div>
                 <!-- 进入链接 -->
-                <a href="https://www.mj98.app/" target="_blank" class="dw">点击下载</a>
+                <a href="https://www.mj98.app/" target="_blank" class="dwa">点击下载</a>
                 <span style="display: none;"><em>0.077秒</em></span><span style="display: none;"><em>0.983秒</em></span></li>
             <li>
-                <div class="miaoinpt miaoinpt1">602ms</div>
-                <div class="miaoinpt miaoinpt2">名爵安卓APP</div>
+                <div class="miaoinpta miaoinpt1a">602ms</div>
+                <div class="miaoinpta miaoinpt2a">名爵安卓APP</div>
                 <!-- 进入链接 -->
-                <a href="tzmjxz.html" target="_blank" class="dw">点击下载</a>
+                <a href="tzmjxz.html" target="_blank" class="dwa">点击下载</a>
                 <span style="display: none;"><em>0.038秒</em></span><span style="display: none;"><em>0.602秒</em></span></li>
 
         </ul>
